<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SendMessageTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="moblie_phone">手机号</string>
    <string name="verification">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="regist">注册</string>
    <string name="text_phone">1.输入手机号</string>
    <string name="text_ver">2.输入验证码</string>
    <string name="text_set_password">3.设置密码</string>
    <string name="agreement">我已阅读并同意</string>
    <string name="meituanagreement">《美团用户协议》</string>

</resources>
