<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regist_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/id_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="注册"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/text_phone"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/text_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/text_ver"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/text_set_password"
            android:textSize="12dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>
